fixed mobile menu not showing items

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -820,3 +820,9 @@ a {
     margin: 0 auto;
     perspective: 1000px;
 }
+
+@media (max-width: 1023px) {
+    .header .mobile-menu li > a:not(#always-visible-menu-button), .header li > div {
+        visibility: visible;
+    }
+}
